Explanation of Divergence notebook and NaiveBayes Dataframe model

--- a/BetsExploring2018/Notes/0_introduction.ipynb
+++ b/BetsExploring2018/Notes/0_introduction.ipynb
@@ -563,11 +563,19 @@
     "\n",
     "The result of these variables and methods will be compared with the actual results of the new test data.\n",
     "\n",
-    "We have defined two sets of data. \n",
-    "- Dataset for **training** the machine learning prediction model. It include the information **until 2017-18** season.\n",
+    "We have defined two sets of data:\n",
+    "\n",
+    "- **Main** dataset: Include all the information\n",
     "\n",
     "\n",
-    "- Dataset for **test** de result of the model. It include the information of the **2018-19** season\n",
+    "- **Recent** dataset: Include information form seassons 2017-18 and 2018-19\n",
+    "\n",
+    "We have divided every dataset in two subdataset:\n",
+    "\n",
+    "- Dataset for **training** the machine learning prediction model. It include randow 80% of information.\n",
+    "\n",
+    "\n",
+    "- Dataset for **test** de result of the model. It include 20% of informationn\n",
     "\n",
     "<img src=\"../Img/calendari_anys.jpg\">\n",
     "\n",
@@ -699,7 +707,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -716,9 +723,9 @@
     "\n",
     "Our first process is responsible for downloading all this files and reorder in folders by country, competition and season, that it fits better to the subsequent treatment we will do.\n",
     "\n",
-    "This process is developed in notebook '1_download-raw.ipynb'.\n",
+    "This process is developed in notebook  '**1_download-raw.ipynb**'.\n",
     "\n",
-    "The following graph shows the distribution of the downloaded data, grouped by country and competition. We can show de minimum and maximum session in every competition and the number of sessions. In fact every season it’s a separate file.\n",
+    "The following table shows the distribution of the downloaded data, grouped by country and competition. We can show de minimum and maximum session in every competition and the number of sessions. In fact every season it’s a separate file.\n",
     "\n",
     "<img src=\"../Img/original_data.gif\">\n"
    ]
@@ -735,10 +742,10 @@
     "\n",
     "The next step was to identify the **common fields**. Since each combination of country, competition and season was a separate file, it could contain different fields. This has happened especially with the data of the betting houses. The cause of this situation is that each betting house operates in different countries and has had activity in different periods of time.\n",
     "\n",
-    "This process was developed in '2_filesAnalysis-raw_to_correct.ipynb'\n",
+    "This process was developed in '**2_filesAnalysis-raw_to_correct.ipynb**'\n",
     "\n",
     "We have reviewed the distribution of bookmakers by country and incorporated into our dataset houses with information in most countries. Finally we have included in our dataset 12 betting houses.\n",
-    "The following chart is an example of the analysis of the distribution of betting houses.\n",
+    "The following table is an example of the analysis of the distribution of betting houses.\n",
     "\n",
     "<img src=\"../Img/bet_houses_distrib.gif\">\n",
     "\n"
@@ -751,19 +758,20 @@
     "After verification of files next step was **unifying** all files in a global dataset called 'main_competitions.csv'. \n",
     "\n",
     "As a part of this task we have selected want fields to include:\n",
-    "    * Classification files: Country, Competition and Season\n",
-    "    * Match information: Date, HomeTeam, AwayTeam, FTR (Full time result)\n",
-    "    * Betting houses quotas. Fields names ara composed by the betting house id and the type of quota id.\n",
-    "            * Betting houses ids are: B365,BS,BW,GB,IW,LB,SO,SB,SJ,SY,VC,WH\n",
-    "            * Quota types ids are: H (Home), D (Draw), A (Away)\n",
     "\n",
-    "This proces was developed in notebook '3_filesUnifying-raw_to_correct.ipynb'\n",
+    "* Classification files: Country, Competition and Season\n",
+    "* Match information: Date, HomeTeam, AwayTeam, FTR (Full time result)\n",
+    "* Betting houses quotas. Fields names ara composed by the betting house id and the type of quota id.\n",
+    "    * Betting houses ids are: B365,BS,BW,GB,IW,LB,SO,SB,SJ,SY,VC,WH\n",
+    "    * Quota types ids are: H (Home), D (Draw), A (Away)\n",
+    "\n",
+    "This proces was developed in notebook '**3_filesUnifying-raw_to_correct.ipynb**'\n",
     "\n",
     "We have also created a second dataset with matches from **seasons 2017-2018 and 2018-2019**, that will be used in the prediction model and it's called 'main_competitions_recent.csv'\n",
     "\n",
     "We have reavaluate the betting houses fields to identify if all of them were used. We detect and drop columns from 4 houses with nulls in all the records of this seasons. Finally this dataset contains 6 betting houses quotas.\n",
     "\n",
-    "This process was developed in notebook '5_recent_seasons_subset.ipynb' \n"
+    "This process was developed in notebook '**5_recent_seasons_subset.ipynb**' \n"
    ]
   },
   {
@@ -772,22 +780,22 @@
    "source": [
     "Next step was validate that **fields** of our dataset are **correct**. In this case all the fields have the correct type and format.\n",
     "\n",
-    "This step was developed in '4_fieldsAnalysis-raw_to_correct.ipynb'"
+    "This step was developed in '**4_fieldsAnalysis-raw_to_correct.ipynb**'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Last step of cleaning was validate **consitency of fields**. We made the following validations:\n",
+    "Last step of cleaning was validate **consistency of fields**. We made the following validations:\n",
     "* Null values required: We validated nulls in required fields and deleted corresponding rows:\n",
     "    * Date: 145 rows\n",
     "    * HomeTeam and AwayTeam: 385 rows\n",
     "    * FTR: 146 rows\n",
-    "* Null values bet houses: We reviewed nulls in betting houses quotas. We decide to drop columns of betting house with almost rows with nulls, in this case: SO and SY. We mantein the rest of the Betting Houses cols unles nulls because we will delete before every specific analisys.\n",
+    "* Null values bet houses: We reviewed nulls in betting houses quotas. We decide to drop columns of betting house with almost rows with nulls, in this case: SO and SY. We maintain the rest of the Betting Houses cols unles nulls because we will delete before every specific analisys.\n",
     "* Unify team names: We have detected teams with different names and unifidied the names\n",
     "\n",
-    "This proces was developed in '5_fieldsAnalysis-correct_to_consistent.ipynb'\n",
+    "This proces was developed in '**5_fieldsAnalysis-correct_to_consistent.ipynb**'\n",
     "\n",
     "<img src=\"../Img/team_names.gif\">\n"
    ]
@@ -806,13 +814,39 @@
     "\n",
     "In first place we identify the betting houses and columns included in the dataset with function 'filterBetHouses'.\n",
     "\n",
-    "Then we calculate the divergence of every individual match with function 'calcDivergence'.\n",
+    "Then we calculate the divergence of every individual match with function '**calcDivergence**'.\n",
     "\n",
     "Bellow this we map this calculation for all the rows in the dataset.\n",
     "\n",
-    "And finally we have implemented the function 'topNDivergence' to obtain the top N matches with highest divergence and the top N matches with de lowest divergence.\n",
+    "And finally we have implemented the function '**topNDivergence**' to obtain the top N matches with highest divergence and the top N matches with de lowest divergence.\n",
     "\n",
-    "This has been developed in notebook '7_divergence.ipynb'\n",
+    "To analyse divergence values we have calculated histogram of its values. This measure has a binomial distribution with values from almost 0% to 80%, with a central value of 7-8%. Central quartiles are between 5,42% and 9,69%. \n",
+    "\n",
+    "Distance between divergences it's small, with only 4,27% of interquartile distance, and 80% of values have only a maximum distance of 10%.\n",
+    "\n",
+    "Next graph shows histogram amb values of mean, median, and percentiles 10%, 25%, 75% and 100%.\n",
+    "\n",
+    "<img src=\"../Img/divergence1.gif\">\n",
+    "\n",
+    "When we will analyse lower and higher divergent matches we will take as limits values from quantiles 10% (4,31%) and 90% (14,06%).\n",
+    " \n",
+    "This has been developed in notebook '**7_divergence.ipynb**'\n",
+    "."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bellow this we have add this measure to datased and saved it to disc.\n",
+    "\n",
+    "This action has been done with function '**calcAndSaveDivergence**'.\n",
+    "\n",
+    "This function uses auxiliar functions like 'reformatRow', 'reformatRDD', 'createDataFrame' and 'saveDFtoCSV' to transform result from 'calcDivergence' function to the needed structured to save dataset again on the disc.\n",
+    "\n",
+    "We have added Divergence field in both datasets: main_competitions and main_competitions_recent.\n",
+    "\n",
+    "This has been developed in notebook '**7_divergenceSave.ipynb**'\n",
     "."
    ]
   },
@@ -874,6 +908,57 @@
     "As it can be seen, in both cases the models seem to be struggling in the draw predictions. This is why their accuracy is only of more or less 50%.\n",
     "\n",
     "As we can see, if the data is more concrete, the performance increases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculation of probabilities\n",
+    "\n",
+    "To obtain a more precise prediction we don't have enough to calculate the most probable result. We need to know the probability of every result.\n",
+    "\n",
+    "We try calculate it with NaiveBayesModel of library mllib, that works with RDDs. This model provide PI logs (probability of result values) and THETA logs (array of probabilities of parameters conditioned to ).\n",
+    "\n",
+    "We calculation from logs of PI and THETA to probabilities of result must be done manually.\n",
+    "\n",
+    "At this point we test **ML library**, that works with Spark DataFrames. NaiveBayesModel of this library provides as result of 'transform' method desired probabilities.\n",
+    "\n",
+    "We have developped a second version of functions to create, train and test the model.\n",
+    "\n",
+    "Function '**calcModelAndPrediction**' mades all this work and it's developped in notebook '**8_NaiveBayesModel-probabilities.ipynb**'\n",
+    "\n",
+    "This are the followed steps:\n",
+    "* **cleanNulls**: Removes null information. \n",
+    "\n",
+    "We decide don't replace nulls with a default value or calculation because this will modify predictions.\n",
+    "\n",
+    "To remove nulls there are to possible strategies: remove cols (Bets houses) or rows (matches). We decide a mixed strategy. We detect automatically Bets houses quotes with a large number of nulls (<80% correct values) and drop his columns. In consequence rest of columns has a high level of information. Then we drop rows with nulls. \n",
+    "\n",
+    "In the case of 'recent' dataset we have dropped 'LB' bets house (67% not null) and maintain 5 bets houses. After dropping nulls rows we keep '99.38%' of rows.\n",
+    "\n",
+    "* **calcBetsHousesCols**: Obtain the list of bets houses quotas columns\n",
+    "This function checks dataset columns and it determine available columns to use as parameters of the model.\n",
+    "\n",
+    "\n",
+    "* **Split taining and test**\n",
+    "We split resulting dataset in two aleatory subsets. 80% it's used to train dataset and 20%  it's used to test dataset.\n",
+    "\n",
+    "\n",
+    "* **calcNaiveBayesModel**: Calculate Naive Bayes Model\n",
+    "We transform result to numeric values (H=0, D=1, A=2), after we create vector of labels and parameters create the model with the 'multinomial' type and fit (train) the model.\n",
+    "After this we calculate the prediction, with the 'transform' method. In this point it's when we obtain probabilities.\n",
+    "\n",
+    "\n",
+    "* **Evaluate model**\n",
+    "To avaluate the model we have used the '**MulticlassClassificationEvaluator**' class and the 'Accuracy' metric.\n",
+    "We use only accuracy metric because it's values are relatively low and has not sense calculate other metrics.\n",
+    "\n",
+    "**Accuracy** values are:\n",
+    "\n",
+    "Model: 48.16 %\n",
+    "\n",
+    "Prediction: 47.44 %\n"
    ]
   },
   {
