Using Divergence and Country in Naive Bayes Model

--- a/BetsExploring2018/Notes/0_introduction.ipynb
+++ b/BetsExploring2018/Notes/0_introduction.ipynb
@@ -872,7 +872,6 @@
    "source": [
     "### 4.3 Prediction of the mach result\n",
     "\n",
-    "\n",
     "In order to predict the match result we have decided to use a classificator model based in __Naive Bayes__. We have been discussing to use some other kinds of models like __Linear Regression__, __Linear Regression with Stochastic Gradient Descent(SGD)__ or __Multinomial Logistic Regression__ but, we have discarded them because we are aiming for another type of outcome. What we want is to get for a match the probability of the three different possible results. \n",
     "\n",
     "For example, a desired outcome would be this one: (__Home Wins__: 45%, __Draw__ : 25%, __Away Wins__ : 30%)\n",
@@ -965,6 +964,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Partition by divergence\n",
+    "\n",
+    "We want to know whether divergence measure affects prediction of results and the accuracy of the model.\n",
+    "\n",
+    "To do this analysis we have used dataset 'main_competition_recent' and versioned functions defined in previous notebook. We have divided information in three subdatsets depending on the value of divergence:\n",
+    "\n",
+    "- Lower divergence: Matches in the 10% lower interval, that is, values below 4.31.\n",
+    "\n",
+    "- Higher divergence: Matches in the 10% upper interval, that is, values over 14.61\n",
+    "\n",
+    "- Central divergence: Matche in the 80% central interval. Values between 4.31 and 14.61\n",
+    "\n",
+    "In addition every subdataset have been divided also two parts. Model: 80%, test: 20%\n",
+    "\n",
+    "We have calculated accuracy of the model and the test in all the subsets. Following graph represent accuracy calculated:\n",
+    "\n",
+    "<img src=\"../Img/divergence_accuracy.gif\">\n",
+    "\n",
+    "Higher divergence subdataset has a good accuracy value around 70%, but the restant datasets have a similar accuracy as the normal model. \n",
+    "\n",
+    "We made also a more detailed partitioning of dataset by deciles of divergence and result confirm that accuracy increase with divergence value. This is probably because these matches have a very clear result prediction from bets houses point of view.\n",
+    "\n",
+    "<img src=\"../Img/divergence_accuracy2.gif\">\n",
+    "\n",
+    "Finally we try to add the 'Divergence' measure as a parameter of the model, and result was similar to the original model:\n",
+    "\n",
+    "* Naive Bayes Model with Divergence\n",
+    "\n",
+    "Model accuracy     :  47.81 %\n",
+    "\n",
+    "Prediction accuracy:  48.13 %\n",
+    "\n",
+    "* Naive Bayes Model without Divergence\n",
+    "\n",
+    "Model accuracy     : 48.16%\n",
+    "\n",
+    "Prediction accuracy: 47.44%\n",
+    "."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Partition by Country\n",
+    "\n",
+    "We're interested in know if other variables can affect model prediction. We take the case of the 'Country' variable. \n",
+    "\n",
+    "Following the same steps as with the measure 'Divergence' we partitioned the dataset by country and we calculated the model and test accuracy.\n",
+    "\n",
+    "<img src=\"../Img/country_accuracy.gif\">\n",
+    "\n",
+    "Only a few countries (greece, portugal, italy, ...) have a higher accuracy taking a partial dataset partitioned by country."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# C. Outcomes\n"
    ]
   },
@@ -980,16 +1038,12 @@
     "\n",
     "We also have developed a proces to obtain the reliability of betting houses and we have calculated with main competitions dataset.\n",
     "\n",
-    "As we have explained, our main goal was to obtain something like this: (__Home Wins__: 45%, __Draw__ : 25%, __Away Wins__ : 30%).\n",
-    "\n",
-    "We know that a model based in __Naive Bayes__ offers this kind of output, but, we have not be able to achieve it yet.\n",
-    "\n",
-    "Right now, our model output is something like this: _\"The most probable result for this match is: __1__\"_\n",
+    "We have obtain a prediction of the result based in **Naive Bayes** that provides a result like this: (__Home Wins__: 45%, __Draw__ : 25%, __Away Wins__ : 30%).\n",
     "\n",
     "We have codified the result so:\n",
-    "    1 : Home wins\n",
-    "    0 : Draw\n",
-    "   -1 : Away wins"
+    "    0 : Home wins\n",
+    "    1 : Draw\n",
+    "    2 : Away wins"
    ]
   },
   {
