Correcting of explanations

--- a/BetsExploring2018/Notes/0_introduction.ipynb
+++ b/BetsExploring2018/Notes/0_introduction.ipynb
@@ -787,15 +787,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Last step of cleaning was validate **consistency of fields**. We made the following validations:\n",
+    "Last step of cleaning was validate **consistency of fields**. \n",
+    "\n",
+    "This proces was developed in '**5_fieldsAnalysis-correct_to_consistent.ipynb**'\n",
+    "\n",
+    "We made the following validations:\n",
+    "\n",
     "* Null values required: We validated nulls in required fields and deleted corresponding rows:\n",
     "    * Date: 145 rows\n",
     "    * HomeTeam and AwayTeam: 385 rows\n",
     "    * FTR: 146 rows\n",
+    "    \n",
+    "    \n",
     "* Null values bet houses: We reviewed nulls in betting houses quotas. We decide to drop columns of betting house with almost rows with nulls, in this case: SO and SY. We maintain the rest of the Betting Houses cols unles nulls because we will delete before every specific analisys.\n",
+    "\n",
+    "In the analysis phase we create subdatasets and we review nulls in every specific subdataset.\n",
+    "\n",
+    "To remove nulls in this case there are to possible strategies: remove cols (Bets houses) or rows (matches). We decide a mixed strategy. We detect automatically Bets houses quotes with a large number of nulls (<80% correct values) and drop his columns. In consequence rest of columns has a high level of information. Then we drop rows with nulls.\n",
+    "\n",
+    "In the case of 'recent' dataset we have dropped 'LB' bets house (67% not null) and maintain 5 bets houses. After dropping nulls rows we keep '99.38%' of rows.\n",
+    "\n",
+    "This specific part is developed in notebook '**8_NaiveBayesModel-probabilities.ipynb**'\n",
+    "\n",
     "* Unify team names: We have detected teams with different names and unifidied the names\n",
     "\n",
-    "This proces was developed in '**5_fieldsAnalysis-correct_to_consistent.ipynb**'\n",
     "\n",
     "<img src=\"../Img/team_names.gif\">\n"
    ]
@@ -825,6 +840,7 @@
     "Distance between divergences it's small, with only 4,27% of interquartile distance, and 80% of values have only a maximum distance of 10%.\n",
     "\n",
     "Next graph shows histogram amb values of mean, median, and percentiles 10%, 25%, 75% and 100%.\n",
+    "\n",
     "\n",
     "<img src=\"../Img/divergence1.gif\">\n",
     "\n",
