Explanation of new function weekPrediction in Dataframe version

--- a/BetsExploring2018/Notes/8_NaiveBayesModel-DataFrame.ipynb
+++ b/BetsExploring2018/Notes/8_NaiveBayesModel-DataFrame.ipynb
@@ -841,7 +841,7 @@
     "    print (\"\\n  - Calculating Bets Houses Cols\")\n",
     "    betsHousesCols =  calcBetsHousesCols(dfok, betsHouses)\n",
     "    \n",
-    "    # Creating vector with label and features for training\n",
+    "    # Creating vector with label and features for prediction\n",
     "    print (\"\\n  - Creating vector with label and features for training\")\n",
     "    vecWeek = createLabelAndFeatures(dfWeek, betsHousesCols)\n",
     "    \n",
@@ -1061,6 +1061,7 @@
     }
    ],
    "source": [
+    "prediction = calcWeekPrediction(modelRecent, dfrecent, \"Spain\", \"2018-11-01\", \"2018-11-07\")\n",
     "print (\"Week prediction:\")\n",
     "prediction.show(50)\n",
     "print (\"Prediction and Label: Home win: 0, Draw: 1, Away win: 2\")"
