Explanation of function calcWeekPrediction

--- a/BetsExploring2018/Notes/0_introduction.ipynb
+++ b/BetsExploring2018/Notes/0_introduction.ipynb
@@ -929,7 +929,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calculation of probabilities\n",
+    "### Calculation with Dataframes (borrar cuando se añada la explicación de probabilidades con RDD)\n",
     "\n",
     "To obtain a more precise prediction we don't have enough to calculate the most probable result. We need to know the probability of every result.\n",
     "\n",
@@ -937,7 +937,16 @@
     "\n",
     "We calculation from logs of PI and THETA to probabilities of result must be done manually.\n",
     "\n",
-    "At this point we test **ML library**, that works with Spark DataFrames. NaiveBayesModel of this library provides as result of 'transform' method desired probabilities.\n",
+    "At this point we test **ML library**, that works with Spark DataFrames. NaiveBayesModel of this library provides as result of 'transform' method desired probabilities."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculation with Dataframes\n",
+    "\n",
+    "At this point we have tried too the **ML package**, that works with Spark DataFrames. This package includes also a NaiveBayesModel implemented. The objective was if we can obtain same results with both packages.\n",
     "\n",
     "We have developped a second version of functions to create, train and test the model.\n",
     "\n",
@@ -974,6 +983,34 @@
     "Model: 48.16 %\n",
     "\n",
     "Prediction: 47.44 %\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally we have implemented a function to obtain the prediction of matche in a country and period of time, by default a week. \n",
+    "For example we have predicted result of matches in Spain in the first week of november. \n",
+    "\n",
+    "The function is called '**calcWeekPrediction**' and it take the original dataframe, the model calculated with 'calcNaiveBayesModel' function, the country name, the initial date and the final date.\n",
+    "This function follow almost the same steps as previous function 'calcModelAndPrediction':\n",
+    "\n",
+    "- Filter dataset by country and dates.\n",
+    "\n",
+    "- Converts result labels to numeric values.\n",
+    "\n",
+    "- Clean nulls in columns and rows\n",
+    "\n",
+    "- Creates vector with label and features for prediction\n",
+    "\n",
+    "- Calculated the prediction with:  predict = model.transform(vecWeek)\n",
+    "\n",
+    "- Reorder and reformat columns of resulting dataset to show result\n",
+    "\n",
+    "This it's a sample of resulting prediction:\n",
+    "\n",
+    "<img src=\"../Img/week_prediction.gif\">\n",
+    "\n"
    ]
   },
   {
