RDD full probabilities

--- a/BetsExploring2018/Notes/0_introduction.ipynb
+++ b/BetsExploring2018/Notes/0_introduction.ipynb
@@ -929,15 +929,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calculation with Dataframes (borrar cuando se añada la explicación de probabilidades con RDD)\n",
+    "### Calculation with RDD\n",
     "\n",
     "To obtain a more precise prediction we don't have enough to calculate the most probable result. We need to know the probability of every result.\n",
     "\n",
-    "We try calculate it with NaiveBayesModel of library mllib, that works with RDDs. This model provide PI logs (probability of result values) and THETA logs (array of probabilities of parameters conditioned to ).\n",
+    "We try calculate it with NaiveBayesModel of library mllib, that works with RDDs. This model provide PI logs (probability of result values) and **THETA** logs (array of probabilities of parameters conditioned to ).\n",
     "\n",
-    "We calculation from logs of PI and THETA to probabilities of result must be done manually.\n",
+    "We calculation from logs of **PI** and **THETA** to probabilities of result must be done manually.\n",
     "\n",
-    "At this point we test **ML library**, that works with Spark DataFrames. NaiveBayesModel of this library provides as result of 'transform' method desired probabilities."
+    "Given a list of bets(matrix of 1 row and as much columns as number of bets), to generate the probability of each result, we have to multiply **THETA** by the list of bets and then add **PI**. The result of this operations will be an unidimensional matrix of three numbers ([a, b, c]). To get the real probabilities what we need to do is to perform the folowwing operation:\n",
+    "\n",
+    "[e^a / e^a + e^b + e^c, e^b / e^a + e^b + e^c, e^c / e^a + e^b + e^c] (Being e the **Euler number**)."
    ]
   },
   {
@@ -1150,7 +1152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.4.5"
   }
  },
  "nbformat": 4,
